--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,8 @@ block content
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
 
-    each projects in data
+    //- testing access to json
+    each project in projects
       li= project
     //- ul 
       each color in colors
