--- a/views/project.pug
+++ b/views/project.pug
@@ -8,11 +8,12 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Use interpolation to dynamically add the project title.
-        h1 Title
-
+        //- h1= project.project_title
+        h1 Hi 
+        h2= prompt
         //- Use interpolation to dynamically add the project description.
         p.lead.text-light
-          | Description
+          | Description 
 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Technologies
