--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
     //- pull projects from json
     each project in projects
         .cell
-        a(href= "/project/" + project.id)
+        a(href= "/projects/" + project.id)
           img.thumbnail(src= project.image_urls[0])
         h5= project.project_name
     
