--- a/views/index.pug
+++ b/views/index.pug
@@ -9,9 +9,10 @@ block content
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
-
+      //- goes through each item in projects variable
       each project in projects
         .cell
+          //- adds id to each URL, adds image source, and project name
           a(href= "/projects/" + project.id)
             img.thumbnail(src= project.image_urls[0])
             h5= project.project_name
