--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,6 +14,7 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
+            //- filename for profile.jpg, path needs to go up a level to access
             img.thumbnail(src='../static/images/profile.jpg')
           .cell.auto
 
